# 01-rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
docs/: class-1.excalidraw
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
